# mandelbrot

./: README.md  colours.c  colours.h  main.c  meson.build
shaders/: compute-v2.glsl  compute.glsl  frag.glsl  frag2.glsl  frag_shader.glsl  frag_shader.glsl~  test.glsl  vertex.glsl  vertex_shader.glsl
